# check-bedrock-access

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  check-bedrock-access.py  check_bedrock_access.py  docker-compose.yml  docker-run.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
bedrock_access_checker/: __init__.py  checker.py  cli.py
tests/: conftest.py  test_basic.py  test_checker.py  test_cli.py  test_integration.py
